--- a/_posts/2019-02-19-test.md
+++ b/_posts/2019-02-19-test.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title:  "Hello, World!"
 ---
 
-# Welcome
+# Hi everybody
 
 **Hello world**, this is my first Jekyll blog post.
 
 I hope you like it!
+
+This thing is so cool, I hope I get to update this often.
